--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
   "name": "kloudmate_todo",
+  "proxy": "https://settled-grub-42.hasura.app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.5.10",
+    "@graphql-codegen/cli": "^2.6.2",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "apollo-link-rest": "^0.9.0-rc.1",
+    "graphql": "^15.8.0",
+    "qs": "^6.10.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.0",
